syntax = "proto3";

package device;

message Event {
  string bank_name = 2;
  string event_type = 3;
  string search_by = 4;
  double amount = 5;
  optional double balance = 6;
  optional string requisite = 7;
  string message_text = 8;
}

message Status {
  string status = 2;
}

message Notification {
  oneof notification {
    Event event = 1;
    Status status = 2;
  }
  string id = 3;
}


message GetDeviceStatusReq {
  string device_id = 1;
}

service DeviceService {
  rpc GetDeviceStatus(GetDeviceStatusReq) returns (Status);
}